# arch_lecture_examples

./: .gitignore  CMakeLists.txt  Dockerfile  devcontainer.md  docker-compose.yml  lab_01_docker-compose.yml  lab_01_dockerfile  lab_02_docker-compose.yml  lab_02_dockerfile  lab_03_docker-compose.yml  lab_03_dockerfile  lab_04_docker-compose.yml  lab_04_dockerfile  lab_04_gateway_dockerfile  lab_05_docker-compose.yml  lab_05_dockerfile  lab_05_gateway_dockerfile  mongo-init.sh  prometheus.yml  readme.md  start_lab_01.sh  start_lab_02.sh  start_lab_03.sh  start_lab_04.sh  start_lab_05.sh  structurizr.md
.devcontainer/: devcontainer.json
hl_mai_01_cpp/: CMakeLists.txt  config.cpp  config.h  main.cpp  new_lib.cpp  new_lib.h  readme.md
hl_mai_02_poco/: CMakeLists.txt  poco_server.cpp  poco_socket.cpp  poco_socket_https.cpp  poco_thread.cpp  readme.md  rootcert.pem  yandex.html
hl_mai_03_server/: CMakeLists.txt  Dockerfile  arch.excalidraw  index.yaml  main.cpp  readme.md  start.sh
hl_mai_03_server/content/: index.html
hl_mai_04_sql/: CMakeLists.txt  commands.sh  commands.sql  main.cpp  readme.md
hl_mai_05_sql_load/: commands.sql  load_json.py  readme.md  requirements.txt
hl_mai_06_ddd/: CMakeLists.txt  README.md  example_0.cpp  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp
hl_mai_07_mongo/: CMakeLists.txt  main.cpp  readme.md
hl_mai_07_mongo_cluster/: docker-compose.yml  mongo_setup.sh
hl_mai_08_graphql/: CMakeLists.txt  README.md  main.cpp  start.sh
hl_mai_08_graphql/GQL/: GQLSchema.cpp  GQLSchema.h  MutationsObject.cpp  MutationsObject.h  QueryObject.cpp  QueryObject.h  UserObject.cpp  UserObject.h
hl_mai_08_graphql/database/: ServiceMock.cpp  ServiceMock.h  database.cpp  database.h  schema.graphql
hl_mai_08_graphql/web_server/: http_request_factory.h  http_web_server.h
hl_mai_08_graphql/web_server/handlers/: graphql_handler.h
hl_mai_08_grpc/: CMakeLists.txt  author.proto  author_client.cc  author_server.cc  readme.md  start_client.sh  start_server.sh
hl_mai_10_prometeus/: CMakeLists.txt  readme.md  start.sh  test.sh  user.yaml
hl_mai_10_prometeus/metrics/: metrics.cpp  metrics.h
hl_mai_10_prometeus/web_server/: http_request_factory.h  http_web_server.h
hl_mai_11_redis/: CMakeLists.txt  main.cpp  pubsub_main.cpp  readme.md
hl_mai_12_tpt/: CMakeLists.txt  index.yml  readme.md  service.cpp
hl_mai_lab_00/: auth.excalidraw  docker-compose.yml  gateway.excalidraw  structurizr.properties  task.md  workspace.dsl  workspace.json
hl_mai_lab_00/decisions/: 0001-архитектурный-стиль.md  0002-масштабирование.md  0003-orm.md  0004-авторизация.md
hl_mai_lab_00/documentation/: start.md
hl_mai_lab_00/structurizr_on_premises/: docker-compose.yml
hl_mai_lab_01/: CMakeLists.txt  Dockerfile  start.sh
hl_mai_lab_01/database/: database.cpp  database.h
hl_mai_lab_01/web_server/handlers/: user_handler.h
hl_mai_lab_02/: CMakeLists.txt  helper.h  pizza.yaml  start.sh
hl_mai_lab_02/config/: config.cpp
hl_mai_lab_02/database/: database.cpp  pizza_order.cpp  user.cpp
hl_mai_lab_02/web_server/: http_request_factory.h
hl_mai_lab_02/web_server/handlers/: pizza_handler.h
hl_mai_lab_03/: CMakeLists.txt  pizza.yaml  start.sh
hl_mai_lab_03/config/: config.h
hl_mai_lab_03/database/: pizza_order.h
hl_mai_lab_03/web_server/handlers/: pizza_handler.h
hl_mai_lab_04/: CMakeLists.txt  pizza.yaml  start.sh  start_gateway.sh  test.sh
hl_mai_lab_04/api_gateway/: main.cpp
hl_mai_lab_04/config/: config.h
hl_mai_lab_04/database/: cache.cpp  database.h  user.cpp
hl_mai_lab_05/: CMakeLists.txt  concept.excalidraw  get.lua  helper.h  start.sh  start_gateway.sh
hl_mai_lab_05/api_gateway/: CircuitBreaker.h
hl_mai_lab_05/config/: config.cpp
hl_mai_lab_05/database/: cache.cpp  cache.h  pizza_order.cpp  user.h
hl_mai_lab_05/web_server/handlers/: user_handler.h
hl_mai_lab_06/: CMakeLists.txt  concept.excalidraw  readme.md  start.sh  start_gateway.sh  start_writer.sh  user.yaml
hl_mai_lab_06/api_gateway/: main.cpp
hl_mai_lab_06/config/: config.cpp  config.h
hl_mai_lab_06/database/: cache.cpp  cache.h  pizza_order.cpp  queue.cpp  queue.h
hl_mai_lab_06/pizza_writer/: main.cpp
hl_mai_lab_06/rabbit/: SimplePocoHandler.cpp  SimplePocoHandler.h
hl_mai_lab_06/web_server/handlers/: pizza_handler.h
