cmake_minimum_required(VERSION 3.11)

project(arch_examples C CXX)

add_subdirectory(hl_mai_01_cpp)
add_subdirectory(hl_mai_02_poco)
add_subdirectory(hl_mai_03_server)
add_subdirectory(hl_mai_04_sql)
add_subdirectory(hl_mai_06_ddd)
add_subdirectory(hl_mai_07_mongo)
add_subdirectory(hl_mai_lab_01)
add_subdirectory(hl_mai_lab_02)